--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "Dev Tinder Application",
   "main": "index.js",
   "scripts": {
-    "start":" node src/app.js",
-    "dev":"nodemon src/app.js"
+    "start": " node src/app.js",
+    "dev": "nodemon src/app.js"
   },
   "author": "Akhil Raj A",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mongoose": "^8.16.2"
   }
 }
